fix person menu positioning on firefox

--- a/src/app/shared/navbar/user-menu/person-menu.component.scss
+++ b/src/app/shared/navbar/user-menu/person-menu.component.scss
@@ -1,6 +1,7 @@
 @import '../../../../assets/styles/vars';
 
 :host {
+    display: block;
     font-size: 0.9em;
     position: relative;
     a {
@@ -31,8 +32,8 @@
     content: '';
     display: block;
     position: absolute;
-    top: 0em;
-    left: 0em;
+    top: 0;
+    left: 0;
     border-radius: $content-border-radius;
     width: 100%;
     height: 100%;
